# LocalAI

./: .gitignore  README.md  build.gradle  gradlew  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/localai/: LocalAIApp.kt
app/src/main/java/com/localai/llm/: InferenceParams.kt  LlamaWrapper.kt  PromptFormatter.kt
app/src/main/java/com/localai/model/: AppDatabase.kt  DownloadService.kt  HuggingFaceApi.kt  ModelCatalog.kt  ModelEntity.kt
app/src/main/java/com/localai/ui/: ChatActivity.kt  ChatAdapter.kt  ChatViewModel.kt  ModelAdapters.kt  ModelManagerActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: bg_bubble_assistant.xml  bg_bubble_user.xml  bg_chip_recommended.xml  bg_dot.xml  bg_send_button.xml  bg_system_message.xml  ic_ai_avatar.xml  ic_launcher.xml  ic_launcher_round.xml  ic_model.xml  ic_send.xml  ic_stop.xml
app/src/main/res/layout/: activity_chat.xml  activity_model_manager.xml  activity_settings.xml  fragment_catalog.xml  fragment_hf_search.xml  fragment_installed.xml  item_catalog_model.xml  item_hf_file.xml  item_hf_model.xml  item_installed_model.xml  item_message_assistant.xml  item_message_system.xml  item_message_user.xml
app/src/main/res/menu/: chat_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: preferences.xml
